# jve-spec-kit-claude

./: .claude-memory  .gitignore  .luacheckrc  AGENTS.md  BASELINE.project_browser.md5  CLAUDE.md  CLAUDE_CONTEXT.md  CMakeLists.txt  CMakeLists_minimal.txt  CODE_REVIEW.md  CONTEXT-LOG.md  CONTEXT-likes-systematic  COVERAGE_RESULTS.md  CPackConfig.cmake  CPackSourceConfig.cmake  DEVELOPMENT-PROCESS.md  ENGINEERING.md  GEMINI.md  Makefile  PLAN_TIMEBASE_MATH_LIBRARY.md  PLAN_TIMEBASE_MIGRATION.md  PLAN_TIMEBASE_SPEC.md  PLAN_UI_PORT_V5.md  PLAYHEAD_RESTORATION_INVARIANT.md  PLAYHEAD_SELECTION_PERSISTENCE.md  RATIONAL_MIGRATION_COMPLETION_PLAN.md  README.md  REFACTOR_PLAN.md  REFACTOR_PLAN_STRICT.md  SECURITY_FIXES.md  SEMANTIC_CLUSTERING_SUMMARY.md  SESSION-STATE.md  TESTING-SYSTEM-SPECIFICATION.md  TODO.md  USEFUL-CODE-REVIEW.md  call_graph.json  clip_audio_inspector.lua  codex-session-said-it-added-temp-gap-clips.txt  gemini-pre-timebase-stable-analysis.txt  gemini-pre-timebase-stable-complete-codebase-review.md  (+24 more)
.claude/: settings.json
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
JVECore_autogen/: deps  mocs_compilation.cpp
JVEEditor_autogen/: deps
bug-reporter-worker/: package-lock.json  package.json  triage-promote.html  tsconfig.json  vitest.config.ts  wrangler.toml
cmake/: generate_build_info.cmake
design examples/: Premiere indicator.HEIC  Resolve indicator.HEIC  source_in_timeline_v1.html  source_in_timeline_v2.html  source_in_timeline_v3.html  source_in_timeline_v4.html
docs/: 2026-03-13 Research Fast Rewind Freezes Picture.md  2026-03-13 Search for Possible AV Sync Issues.md  2026-06-06_CLAUDE_SKEPTICAL_CODE_REVIEW_orig_repo.md  2026-06-06_GEMINI-no-mem_SKEPTICAL_CODE_REVIEW_orig_repo.md  2026-06-06_GEMINI-with-claude-memories-loaded_SKEPTICAL_CODE_REVIEW_orig_repo.md  2026-06-06_SKEPTICAL_CODE_REVIEW.md  2026-06-07-claude-SKEPTICAL_CODE_REVIEW.md  2026-06-07-gemini-SKEPTICAL_CODE_REVIEW.md  2026-06-09_fable5_battery_control_opus47.md  2026-06-09_fable5_battery_results.md  2026-06-09_fable5_behavioral_battery.md  2026-06-14_anamnesis_tso_warnings_triage.md  2026-06-17-agy-gemini-flash-3-5_SKEPTICAL_CODE_REVIEW.md  2026-06-17-anamnesis-relink-bug-report.md  AGENTS.md  ANALYSIS_TOOL_CLUSTER_TO_MODULE_SPEC v1.md  ANALYSIS_TOOL_CLUSTER_TO_MODULE_SPEC v2.md  ANALYSIS_TOOL_DESIGN_ADDENDUM.md  ANALYSIS_TOOL_DESIGN_ADDENDUM_2.md  ANALYSIS_TOOL_EVOLUTION_HISTORY.md  ANALYSIS_TOOL_ORIGINAL_CHAT.md  ANALYSIS_TOOL_OUTPUT_SENTENCE_STRUCTURE.md  ARCHITECTURE_MAP.md  AUDIO_ECHO_DEBUG_HANDOFF.md  AV-SYNC+HI-SPEED-SHUTTLE-SPEC-v1.md  BUG-REPORTING-TESTING-ENVIRONMENT-SPEC.md  BUG_REPORTER_USER_GUIDE.md  CLAUDE_CONTEXT.md  CODEBASE_OVERVIEW.md  CODEX.md  COVERAGE-RESULTS-FIXES.md  DRP_BLOB_FIELDS.md  DRP_FORMAT_SPEC.md  ENGINEERING-COMPLIANCE-AUDIT-PLAN.md  EVIDENCE_INDEX.md  GAP_RESTORATION_PLAN.md  GOLDEN_PATHS.md  GOLDEN_TEST_1_SPECIFICATION.md  INVARIANTS.md  JVE_AUDIO_PLAN_SPEC_v1.md  (+56 more)
hooks/: pre-commit
keymaps/: default.jvekeys
krono/: __init__.py
prompts/: BASELINE_MASTER_REVIEW.md  CLAUDE_BASELINE_PROMPTS.md  INCREMENTAL_REVIEW.md  PROMPT_CREATE_MASTER_REVIEW.md  baseline_passes.txt
scripts/: _run_in_vm.sh  analyze_lua_structure.py  build_call_graph.py  build_call_graph_ast.py  check_clean_make.sh  create_canonical_ripple_project.sh  lint_anti_patterns.md  lint_anti_patterns.sh  lua_mod_analyze.py  recompute_signature_vectors.py  run_baseline_reviews.sh  run_binding_tests.sh  run_graded_item_bake_probe.sh  run_group_bake_probe.sh  run_helper_tests.sh  run_incremental_reviews.sh  run_live_resolve_test.sh  run_lua_tests.sh  run_luacheck.sh  run_real_timeline_grade_probe.sh  run_scan_build.sh  run_timeline_graph_probe.sh  run_timeline_lut_capture_probe.sh  show_prefs_dialog.lua  sync-to-vm.sh  test_bug_reporter_dialogs.lua  validate_golden_test_1.py  validate_golden_test_2.py  validate_golden_test_3.py  validate_golden_test_5.py  with_make_lock.sh
specs/: streams-first-class-lifecycle.md
src/: README-old.md  README.md  assert_handler.cpp  assert_handler.h  cpu_video_surface.cpp  cpu_video_surface.h  debug_terminal.cpp  debug_terminal.h  gpu_video_surface.h  gpu_video_surface.mm  jve_build_info.h.in  jve_log.cpp  jve_log.h  jve_lua_callback.cpp  jve_lua_callback.h  main.cpp  playback_controller.h  playback_controller.mm  qt_bindings.cpp  qt_bindings.h  resource_paths.cpp  resource_paths.h  simple_lua_engine.cpp  timeline_renderer.cpp  timeline_renderer.h
test_clip_entity_autogen/: deps
test_clip_selection_autogen/: deps
test_command_entity_autogen/: deps
test_command_execute_autogen/: deps
test_command_redo_autogen/: deps
test_command_replay_invariant_autogen/: deps
test_command_undo_autogen/: deps
test_edge_selection_autogen/: deps
test_media_entity_autogen/: deps
test_media_import_autogen/: deps
test_project_create_autogen/: deps
test_project_entity_autogen/: deps
test_project_load_autogen/: deps
test_project_persistence_autogen/: deps
test_property_entity_autogen/: deps
test_scriptable_timeline_autogen/: deps
test_scriptable_timeline_widget_autogen/: deps
test_selection_properties_autogen/: deps
test_selection_system_autogen/: deps
test_sequence_create_autogen/: deps
test_sequence_entity_autogen/: deps  mocs_compilation.cpp
test_timeline_lua_logic_autogen/: deps
test_timeline_operations_autogen/: deps
test_track_entity_autogen/: deps
test_uuid_determinism_autogen/: deps
tests/: README-run_lua_tests_all.md  README.md  diagnose_db_integrity.lua  drp_test_helpers.lua  import_schema.lua  integration_test_browser_lists_sequences.lua  integration_test_drp_start_timecode.lua  reproduce_rational_compare.lua  run_all_bug_reporter_tests.sh  run_integration_tests.sh  run_lua_tests_all.sh  test_013_blade_across_linked_tracks.lua  test_013_delete_clip.lua  test_013_duplicate_copies_overrides.lua  test_013_insert_cycle_refuse.lua  test_013_ripple_delete_link_group.lua  test_013_signal_sequence_content_changed.lua  test_013_slip_slide_roll.lua  test_013_split_preserves_overrides.lua  test_015_patch_palette.lua  (+1000 more)
(+2394 files in other folders)
